added header elements to index  HTML

--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
     <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 <body>
-    <header>
-        <h1 id="formHeader">Basketball Blog</h1>
-    </header>
-    
+    <div class="light">
+        <header>
+            <h1>BBall Blog</h1>
+            <nav id="mode">
+              <div class="icon">
+                <p>☀️</p>
+              </div>
+              <label class="switch icon">
+                <input type="checkbox" id="mode-switcher">
+                <span class="slider round"></span>
+              </label>
+              <div class="icon">
+                <p>🌙</p>
+              </div>
+            </nav>
+        </header>
+
+        <main>
+            <section>
+                <img src="" alt="">
+            </section>
+            <section>
+                <form action=""></form>
+            </section>
+        </main>
+    </div>
     <script src="./assets/js/logic.js"></script>
     <script src="./assets/js/form.js"></script>
 </body>
