added main elements w/ form element, HTML

--- a/index.html
+++ b/index.html
@@ -26,11 +26,27 @@
         </header>
 
         <main>
-            <section>
+            <section class="imgCard">
                 <img src="" alt="">
             </section>
-            <section>
-                <form action=""></form>
+            <section class="formCard">
+                <h2>What's The Latest In Basketball?</h2>
+                <form>
+                    <div id="username">
+                        <label>Username</label>
+                        <input type="text" name="username" id="username" placeholder="@ball4Life123" />
+                    </div>
+                    <div id="title">
+                        <label>Title</label>
+                        <input type="text" name="title" id="title" placeholder="Key Players in Free Agency" />
+                    </div>
+                    <div id="content">
+                        <label>Blog Post</label>
+                        <textarea name="blog" id="blog"></textarea>
+                    </div>
+                    <div id="msg"></div>
+                    <button id="sign-up">Sign Up</button>
+                </form>
             </section>
         </main>
     </div>
