updated form element, added footer - HTML

--- a/index.html
+++ b/index.html
@@ -26,29 +26,37 @@
         </header>
 
         <main>
-            <section class="imgCard">
+            <section class="img-card">
                 <img src="" alt="">
             </section>
-            <section class="formCard">
+            <section class="form-card">
                 <h2>What's The Latest In Basketball?</h2>
                 <form>
-                    <div id="username">
+                    <div id="form-input">
                         <label>Username</label>
-                        <input type="text" name="username" id="username" placeholder="@ball4Life123" />
+                        <input type="text" name="username" id="username" />
                     </div>
-                    <div id="title">
+                    <div id="form-input">
                         <label>Title</label>
-                        <input type="text" name="title" id="title" placeholder="Key Players in Free Agency" />
+                        <input type="text" name="title" id="title" />
                     </div>
-                    <div id="content">
+                    <div id="form-input">
                         <label>Blog Post</label>
                         <textarea name="blog" id="blog"></textarea>
                     </div>
-                    <div id="msg"></div>
-                    <button id="sign-up">Sign Up</button>
+                    <div id="form-msg"></div>
+                    <button id="submit">Post</button>
                 </form>
             </section>
         </main>
+
+        <footer>
+            <h3>Made by 🤖 Imposters R' Us</h3>
+            <ul>
+                <li><a href="https://justmacn.github.io/Portfolio-v1/">Developer Portfolio</a></li>
+                <li><a href="">BBall Blog</a></li>
+            </ul>
+        </footer>
     </div>
     <script src="./assets/js/logic.js"></script>
     <script src="./assets/js/form.js"></script>
