added event logic to form - JS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <textarea name="blog" id="blog"></textarea>
                     </div>
                     <div id="form-msg"></div>
-                    <button id="submit">Post</button>
+                    <button id="form-btn">Post</button>
                 </form>
             </section>
         </main>
