added error message, needs to be debugged - JS

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <h2>What's The Latest In Basketball?</h2>
                 <form>
                     <div id="form-input">
-                        <label>Username</label>
+                        <label for="username">Username</label>
                         <input type="text" name="username" id="username" />
                     </div>
                     <div id="form-input">
-                        <label>Title</label>
+                        <label for="title">Title</label>
                         <input type="text" name="title" id="title" />
                     </div>
                     <div id="form-input">
-                        <label>Blog Post</label>
+                        <label for="blog">Blog Post</label>
                         <textarea name="blog" id="blog"></textarea>
                     </div>
                     <div id="form-msg"></div>
