added btn event, retrival and init fucntions to blog.js..array needs debugging - JS

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
         </header>
 
         <main>
-            <ul id="blogs"></ul>
+            <ul id="blogs-list"></ul>
         </main>
 
         <footer>
