added logic.js click event for color mode // JS

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="light">
+    <div class="mode-container light">
         <header class="header-container">
             <h1>BBall Blog</h1>
             <nav id="mode">
