--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 <body>
-    <div class="light">
+    <div class="mode-container light">
         <header>
             <nav id="mode">
               <div class="icon">
