added flex box to header, style and blog // CSS

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <div class="mode-container light">
         <header class="header-container">
             <h1>BBall Blog</h1>
-            <nav id="mode">
+            <nav class="mode">
                 <div class="icon">
                     <button type="button" id="back-btn">Back</button>
                 </div>
