--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="mode-container light">
         <header>
-            <nav id="mode">
+            <nav class="mode">
               <div class="icon">
                 <p>☀️</p>
               </div>
