added styling to blog-container // CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </div>
             </nav>
         </header>
-
+        <!-- <div class="header-border"></div> -->
         <main>
             <section class="img-card">
                 <h1>BBall Blog</h1>
