--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
         </header>
 
         <main>
-            <ul id="blogs-list"></ul>
+            <ul class="blogs-container"></ul>
         </main>
 
         <footer>
