added light and dark color modes // CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="mode-container light">
-        <header>
+        <header class="header-container">
+            <div></div>
             <nav class="mode">
               <div class="icon">
                 <p>☀️</p>
@@ -23,8 +24,8 @@
               </div>
             </nav>
         </header>
-        <!-- <div class="header-border"></div> -->
-        <main>
+        
+        <main class="main-container">
             <section class="img-card">
                 <h1>BBall Blog</h1>
             </section>
